# PhyAnim

./: .clang-format  .gitignore  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
CMake/: FindSpatialIndex.cmake
examples/: AnimMeshApp.cpp  AnimMeshApp.h  CMakeLists.txt  Camera.cpp  Camera.h  GLFWApp.cpp  GLFWApp.h  Icosphere.cpp  Icosphere.h  MoveMeshApp.cpp  OverlapApp.cpp  OverlapApp.h  OverlapScene.cpp  OverlapScene.h  OverlapSlicesApp.cpp  OverlapSlicesApp.h  RenderProgram.cpp  RenderProgram.h  Scene.cpp  Scene.h  SomaApp.cpp  SomaApp.h  SomaGenerator.cpp  SomaGenerator.h  Spring.h  animMesh.cpp  checkCollision.cpp  formatConvert.cpp  mesh_test.cpp  moveMesh.cpp  multi_index.py  overlap.cpp  overlapSlices.cpp  renderMesh.cpp  soma_index.py  test.cpp  testAnim.cpp  tetgenToOBJ.cpp  tetrahedralizeMesh.cpp
examples/appAnimMesh/: AnimMeshApp.cpp  AnimMeshApp.h  CMakeLists.txt
examples/appCheckCollisions/: CMakeLists.txt  checkCollision.cpp
examples/appCollidingSomas/: CMakeLists.txt  CollidingSomas.cpp  CollidingSomas.h  main.cpp
examples/appCollidingSomasViz/: CMakeLists.txt  CollidingSomas.cpp  CollidingSomas.h
examples/appDemo/: CMakeLists.txt  DemoApp.cpp  DemoApp.h
examples/appFormatConverter/: CMakeLists.txt  formatConverter.cpp
examples/appMoveMesh/: CMakeLists.txt  MoveMeshApp.cpp  MoveMeshApp.h
examples/appOverlap/: CMakeLists.txt
examples/appOverlapCircuit/: CMakeLists.txt  OverlapCircuitApp.cpp  OverlapCircuitApp.h  main.cpp
examples/appOverlapCircuitViz/: CMakeLists.txt  OverlapCircuitApp.cpp  OverlapCircuitApp.h
examples/appOverlapCollisions/: CMakeLists.txt  OverlapCollisionsApp.h  overlap.cpp
examples/appOverlapCollisionsViz/: CMakeLists.txt  OverlapCollisionsApp.cpp  OverlapCollisionsApp.h
examples/appRenderMesh/: CMakeLists.txt  renderMesh.cpp
examples/appRenderMorpho/: CMakeLists.txt  RenderMorphoApp.cpp  RenderMorphoApp.h
examples/appSceneGenerator/: CMakeLists.txt  SceneGeneratorApp.cpp  SceneGeneratorApp.h
examples/appSomaGenerator/: CMakeLists.txt  Icosphere.cpp  Icosphere.h  SWCReader.h  SomaApp.cpp  SomaApp.h  SomaGenerator.cpp  SomaGenerator.h  Tet.h
examples/appTest/: CMakeLists.txt  Test.cpp
examples/appTetrahedralizeMesh/: CMakeLists.txt  tetrahedralizeMesh.cpp
examples/common/: Camera.cpp  Camera.h  Circuit.h  CollisionSolver.h  ColorPalette.h  GLFWApp.cpp  GLFWApp.h  Mesh.cpp  Mesh.h  Morpho.cpp  Morpho.h  RenderProgram.cpp  RenderProgram.h  Scene.cpp  Scene.h  SceneGenerator.h  SkyBox.cpp  SkyBox.h  Texture.cpp  Texture.h
examples/data/: 12.off  a_s.swc  bar.ply  cylinder.ply  ico5.ply  ico5.tet  ico6.ply  ico6.tet  mesh-1-0.5.tetsolution.off  mesh-1-1.0.tet  mesh-1-1.0.tetsolution.off  mesh-2-0.5.tetsolution.off  mesh-2-1.0.tet  mesh-2-1.0.tetsolution.off  mesh1_overlap1.tet  mesh2_overlap1.tet  simpleTet.tet  test.ele  test.node  test.swc  tet.ele  tet.node  tet.off
examples/data/scene/: 1.off  10.off  11.off  3.off  4.off
examples/phyanimAnimMesh/: AnimMeshApp.cpp  AnimMeshApp.h  CMakeLists.txt
examples/phyanimCheckCollisions/: CMakeLists.txt  checkCollision.cpp
examples/phyanimDemo/: CMakeLists.txt  DemoApp.cpp  DemoApp.h
examples/phyanimFormatConverter/: CMakeLists.txt  formatConverter.cpp
examples/phyanimMoveMesh/: CMakeLists.txt  MoveMeshApp.cpp  MoveMeshApp.h
examples/phyanimOverlap/: CMakeLists.txt  overlap.cpp
examples/phyanimOverlapCircuit/: CMakeLists.txt  OverlapCircuitApp.cpp  OverlapCircuitApp.h
examples/phyanimOverlapCollisions/: CMakeLists.txt  OverlapCollisionsApp.cpp  OverlapCollisionsApp.h  overlapCollisions.cpp
examples/phyanimOverlapResolution/: CMakeLists.txt  OverlapApp.cpp  OverlapApp.h  overlap.cpp
examples/phyanimRenderMesh/: CMakeLists.txt  renderMesh.cpp
examples/phyanimRenderMorpho/: CMakeLists.txt
examples/phyanimSceneGenerator/: CMakeLists.txt  SceneGeneratorApp.cpp  SceneGeneratorApp.h
examples/phyanimSomaGenerator/: CMakeLists.txt  Icosphere.cpp  Icosphere.h  SWCReader.cpp  Sample.h  SomaApp.cpp  SomaApp.h  SomaGenerator.cpp  SomaGenerator.h  Spring.h  StiffnessMatrix.cpp  StiffnessMatrix.h  somaGenerator.cpp
examples/phyanimTetrahedralizeMesh/: CMakeLists.txt  tetrahedralizeMesh.cpp
examples/test/: CMakeLists.txt  Test.cpp
phyanim/: AnimSystem.cpp  AnimSystem.h  AnimationSystem.h  AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  BoundingVolume.cpp  BoundingVolume.h  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  DrawableMesh.cpp  DrawableMesh.h  Edge.cpp  Edge.h  ExplicitFEMSystem.cpp  ExplicitFEMSystem.h  ExplicitMassSpringSystem.cpp  ExplicitMassSpringSystem.h  FEMSystem.cpp  FEMSystem.h  HierarchicalAABB.cpp  HierarchicalAABB.h  ImplicitFEMSystem.cpp  ImplicitFEMSystem.h  ImplicitMassSpringSystem.cpp  ImplicitMassSpringSystem.h  MassSpringSystem.cpp  MassSpringSystem.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Phyanim.h  Primitive.h  SparseMatrix.h  Tetrahedron.cpp  (+3 more)
phyanim/anim/: AnimSystem.cpp  AnimSystem.h  CollisionDetection.cpp  CollisionDetection.h  ExplicitMassSpringSystem.cpp  ExplicitMassSpringSystem.h  ImplicitFEMSystem.cpp  ImplicitFEMSystem.h
phyanim/geometry/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  Edge.cpp  Edge.h  HierarchicalAABB.cpp  HierarchicalAABB.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Primitive.h  Tetrahedron.cpp  Tetrahedron.h  Triangle.cpp  Triangle.h
phyanim/graphics/: Camera.cpp  Camera.h  ColorPalette.h  Mesh.cpp  Mesh.h  RenderProgram.cpp  RenderProgram.h  Scene.cpp  Scene.h  SkyBox.cpp  SkyBox.h  Texture.cpp  Texture.h
python/: app.py  loadMorphoIndex.py  morphoRender.py  morphoRenderIndex.py  morpho_index_2k.sh  morpho_index_nsetm.sh  morphology.py  overlap.py  overlapCircuit.py  overlapIndex.sh  overlapMorphology.py  render.py  render.sh  renderCircuit.py  renderCircuitIndex.py  renderIndex.sh  renderIndex2K.sh  renderMorpho.py  renderMorphoIndex.py  renderMorphoIndexTest.py  renderMorphology.py  renderRopes.py  renderSphere.py  renderSprings.py
python/anim/: geometry.py  massSpring.py
(+27 files in other folders)
